--- a/checkout-service/src/main/resources/application.properties
+++ b/checkout-service/src/main/resources/application.properties
@@ -1,1 +1,9 @@
+spring.application.name=checkout-service
 
+
+#standalone database
+spring.jpa.database=POSTGRESQL
+spring.datasource.platform=postgres
+spring.datasource.url=jdbc:postgresql://localhost:5432/checkout-db
+spring.datasource.username=gca
+spring.datasource.password=gca
