create docker for shipping service

--- a/shipping-service/src/main/resources/application.properties
+++ b/shipping-service/src/main/resources/application.properties
@@ -1,1 +1,9 @@
+spring.application.name=shipping-service
 
+
+#standalone database
+spring.jpa.database=POSTGRESQL
+spring.datasource.platform=postgres
+spring.datasource.url=jdbc:postgresql://localhost:5432/shipping-db
+spring.datasource.username=gca
+spring.datasource.password=gca
