--- a/catalog-service/src/main/resources/application.properties
+++ b/catalog-service/src/main/resources/application.properties
@@ -1,5 +1,5 @@
 spring.application.name=catalog-service
-
+server.port=9080
 
 #standalone database
 spring.jpa.database=POSTGRESQL
@@ -7,3 +7,15 @@ spring.datasource.platform=postgres
 spring.datasource.url=jdbc:postgresql://localhost:5432/catalog-db
 spring.datasource.username=gca
 spring.datasource.password=gca
+
+
+#kafka configuration
+#spring.kafka.producer.bootstrap-servers=localhost:9092
+#spring.kafka.producer.key-serializer=org.apache.kafka.common.serialization.StringSerializer
+#spring.kafka.producer.value-serializer=org.apache.kafka.common.serialization.StringSerializer
+
+#spring.kafka.consumer.bootstrap-servers=localhost:9092
+#spring.kafka.consumer.group-id=group_id
+#spring.kafka.consumer.auto-offset-reset=earliest
+#spring.kafka.consumer.key-deserializer=org.apache.kafka.common.serialization.StringDeserializer
+#spring.kafka.consumer.value-deserializer=org.apache.kafka.common.serialization.StringDeserializer
