--- a/catalog-service/src/main/resources/application-production.properties
+++ b/catalog-service/src/main/resources/application-production.properties
@@ -11,11 +11,11 @@ spring.datasource.password=gca
 
 
 #kafka configuration
-#spring.kafka.producer.bootstrap-servers=localhost:9092
+spring.kafka.producer.bootstrap-servers=kafka-service.default.svc.cluster.local:31176
 #spring.kafka.producer.key-serializer=org.apache.kafka.common.serialization.StringSerializer
 #spring.kafka.producer.value-serializer=org.apache.kafka.common.serialization.StringSerializer
 
-#spring.kafka.consumer.bootstrap-servers=localhost:9092
+spring.kafka.consumer.bootstrap-servers=kafka-service.default.svc.cluster.local:31176
 #spring.kafka.consumer.group-id=group_id
 #spring.kafka.consumer.auto-offset-reset=earliest
 #spring.kafka.consumer.key-deserializer=org.apache.kafka.common.serialization.StringDeserializer
