--- a/kafka-broker.yaml
+++ b/kafka-broker.yaml
@@ -20,12 +20,18 @@ spec:
         - containerPort: 9092
         env:
         - name: KAFKA_ADVERTISED_PORT
-          value: "30718"
+          value: "31041"
         - name: KAFKA_ADVERTISED_HOST_NAME
-          value: 192.168.1.240
+          value: 192.168.99.100
         - name: KAFKA_ZOOKEEPER_CONNECT
           value: zoo1:2181
         - name: KAFKA_BROKER_ID
           value: "0"
         - name: KAFKA_CREATE_TOPICS
           value: admintome-test:1:1
+        - name: KAFKA_OFFSETS_TOPIC_REPLICATION_FACTOR
+          value: "1"
+        - name: KAFKA_TRANSACTION_STATE_LOG_REPLICATION_FACTOR
+          value: "1"
+        - name: KAFKA_TRANSACTION_STATE_LOG_MIN_ISR
+          value: "1"
