write basic crud for product

--- a/catalog-service/src/main/resources/application-production.properties
+++ b/catalog-service/src/main/resources/application-production.properties
@@ -5,6 +5,6 @@ spring.profiles.active=production
 #standalone database
 spring.jpa.database=POSTGRESQL
 spring.datasource.platform=postgres
-spring.datasource.url=jdbc:postgresql://postgres.default.svc.cluster.local/catalog-db
+spring.datasource.url=jdbc:postgresql://postgres.default.svc.cluster.local/catalog-db?currentSchema=webshop_catalog
 spring.datasource.username=gca
 spring.datasource.password=gca
