--- a/catalog-service/src/main/resources/application.properties
+++ b/catalog-service/src/main/resources/application.properties
@@ -3,7 +3,8 @@ server.port=9080
 
 #standalone database
 spring.jpa.database=POSTGRESQL
-spring.datasource.platform=postgres
-spring.datasource.url=jdbc:postgresql://localhost:5432/catalog-db
+spring.jpa.properties.hibernate.default_schema=webshop_catalog
+spring.datasource.platform=postgresa
+spring.datasource.url=jdbc:postgresql://localhost:5432/webshop-db
 spring.datasource.username=gca
 spring.datasource.password=gca
