--- a/cart-service/src/main/resources/application.properties
+++ b/cart-service/src/main/resources/application.properties
@@ -1,9 +1,10 @@
 spring.application.name=cart-service
-
+server.port=9081
 
 #standalone database
 spring.jpa.database=POSTGRESQL
+spring.jpa.properties.hibernate.default_schema=webshop_cart
 spring.datasource.platform=postgres
-spring.datasource.url=jdbc:postgresql://localhost:5432/cart-db
+spring.datasource.url=jdbc:postgresql://localhost:5432/webshop-db
 spring.datasource.username=gca
 spring.datasource.password=gca
