--- a/cart-service/src/main/resources/application-production.properties
+++ b/cart-service/src/main/resources/application-production.properties
@@ -6,6 +6,11 @@ spring.profiles.active=production
 spring.jpa.database=POSTGRESQL
 spring.jpa.properties.hibernate.default_schema=webshop_cart
 spring.datasource.platform=postgres
-spring.datasource.url=jdbc:postgresql://postgres.default.svc.cluster.local/webshop-db
+spring.datasource.url=jdbc:postgresql://postgres.default.svc.cluster.local/webshop-db?createDatabaseIfNotExist=true&useSSL=false
 spring.datasource.username=gca
 spring.datasource.password=gca
+
+spring.session.store-type=jdbc
+spring.session.jdbc.initialize-schema=always
+spring.session.timeout.seconds=600
+spring.h2.console.enabled=true
