Adds basic-auth-secrets and reorganizes secrets

--- a/templates/postgres/statefulset.yaml
+++ b/templates/postgres/statefulset.yaml
@@ -21,12 +21,12 @@ spec:
             - name: POSTGRES_PASSWORD
               valueFrom:
                 secretKeyRef:
-                  name: {{ template "postgres.fullname" . }}-secrets
+                  name: {{ template "webshop.fullname" . }}-db-secrets
                   key: postgresPassword
             - name: POSTGRES_USER
               valueFrom:
                 secretKeyRef:
-                  name: {{ template "postgres.fullname" . }}-secrets
+                  name: {{ template "webshop.fullname" . }}-db-secrets
                   key: postgresUsername
             - name: POSTGRES_DB
               value: {{ default .Values.postgres.db ("" | quote) }}
@@ -35,47 +35,47 @@ spec:
             - name: WEBSHOP_CATALOG_SCHEMA
               valueFrom:
                 secretKeyRef:
-                  name: {{ template "postgres.fullname" . }}-secrets
+                  name: {{ template "webshop.fullname" . }}-db-secrets
                   key: catalogSchema
             - name: WEBSHOP_CATALOG_USER
               valueFrom:
                 secretKeyRef:
-                  name: {{ template "postgres.fullname" . }}-secrets
+                  name: {{ template "webshop.fullname" . }}-db-secrets
                   key: catalogUsername
             - name: WEBSHOP_CATALOG_USER_PASSWORD
               valueFrom:
                 secretKeyRef:
-                  name: {{ template "postgres.fullname" . }}-secrets
+                  name: {{ template "webshop.fullname" . }}-db-secrets
                   key: catalogPassword
             - name: WEBSHOP_CART_SCHEMA
               valueFrom:
                 secretKeyRef:
-                  name: {{ template "postgres.fullname" . }}-secrets
+                  name: {{ template "webshop.fullname" . }}-db-secrets
                   key: cartSchema
             - name: WEBSHOP_CART_USER
               valueFrom:
                 secretKeyRef:
-                  name: {{ template "postgres.fullname" . }}-secrets
+                  name: {{ template "webshop.fullname" . }}-db-secrets
                   key: cartUsername
             - name: WEBSHOP_CART_USER_PASSWORD
               valueFrom:
                 secretKeyRef:
-                  name: {{ template "postgres.fullname" . }}-secrets
+                  name: {{ template "webshop.fullname" . }}-db-secrets
                   key: cartPassword
             - name: WEBSHOP_SHIPPING_SCHEMA
               valueFrom:
                 secretKeyRef:
-                  name: {{ template "postgres.fullname" . }}-secrets
+                  name: {{ template "webshop.fullname" . }}-db-secrets
                   key: shippingSchema
             - name: WEBSHOP_SHIPPING_USER
               valueFrom:
                 secretKeyRef:
-                  name: {{ template "postgres.fullname" . }}-secrets
+                  name: {{ template "webshop.fullname" . }}-db-secrets
                   key: shippingUsername
             - name: WEBSHOP_SHIPPING_USER_PASSWORD
               valueFrom:
                 secretKeyRef:
-                  name: {{ template "postgres.fullname" . }}-secrets
+                  name: {{ template "webshop.fullname" . }}-db-secrets
                   key: shippingPassword
           volumeMounts:
             - name: {{ template "postgres.fullname" . }}-datav
