Extracted postgres-env into _helpers.tpl and updated init-config

--- a/templates/postgres/config.yaml
+++ b/templates/postgres/config.yaml
@@ -16,14 +16,14 @@ data:
     CREATE SCHEMA $WEBSHOP_CART_SCHEMA;
     CREATE SCHEMA $WEBSHOP_SHIPPING_SCHEMA;
 
-    CREATE USER $WEBSHOP_CATALOG_USER WITH ENCRYPTED PASSWORD '$WEBSHOP_CATALOG_USER_PASSWORD';
-    GRANT ALL ON SCHEMA $WEBSHOP_CATALOG_SCHEMA TO $WEBSHOP_CATALOG_USER;
+    CREATE USER $WEBSHOP_CATALOG_DB_USER WITH ENCRYPTED PASSWORD '$WEBSHOP_CATALOG_DB_PASSWORD';
+    GRANT ALL ON SCHEMA $WEBSHOP_CATALOG_SCHEMA TO $WEBSHOP_CATALOG_DB_USER;
 
-    CREATE USER $WEBSHOP_CART_USER WITH ENCRYPTED PASSWORD '$WEBSHOP_CART_USER_PASSWORD';
-    GRANT ALL ON SCHEMA WEBSHOP_CART_SCHEMA TO $WEBSHOP_CART_USER;
+    CREATE USER $WEBSHOP_CART_DB_USER WITH ENCRYPTED PASSWORD '$WEBSHOP_CART_DB_PASSWORD';
+    GRANT ALL ON SCHEMA WEBSHOP_CART_SCHEMA TO $WEBSHOP_CART_DB_USER;
 
-    CREATE USER $WEBSHOP_SHIPPING_USER WITH ENCRYPTED PASSWORD '$WEBSHOP_SHIPPING_USER_PASSWORD';
-    GRANT ALL ON SCHEMA $WEBSHOP_SHIPPING_SCHEMA TO $WEBSHOP_SHIPPING_USER;
+    CREATE USER $WEBSHOP_SHIPPING_DB_USER WITH ENCRYPTED PASSWORD '$WEBSHOP_SHIPPING_DB_PASSWORD';
+    GRANT ALL ON SCHEMA $WEBSHOP_SHIPPING_SCHEMA TO $WEBSHOP_SHIPPING_DB_USER;
     "
 
-    psql -U$POSTGRES_USER -c "$cmd"
+    psql -U$POSTGRES_USER -d$POSTGRES_DB -c "$cmd"
