--- a/values.yaml
+++ b/values.yaml
@@ -37,6 +37,10 @@ catalog:
     password: ""
 
 shipping:
+  image: trnhan251/shipping-service:latest
+  port: 8080
+  service:
+    port: 8080
   db:
     schema: webshop_shipping_schema
     username: webshop_shipping_db_user
