Updates env-var names

--- a/templates/postgres/config.yaml
+++ b/templates/postgres/config.yaml
@@ -12,18 +12,18 @@ data:
     cmd="
     DROP SCHEMA public;
 
-    CREATE SCHEMA $WEBSHOP_CATALOG_SCHEMA;
-    CREATE SCHEMA $WEBSHOP_CART_SCHEMA;
-    CREATE SCHEMA $WEBSHOP_SHIPPING_SCHEMA;
+    CREATE SCHEMA $WEBSHOP_CATALOG_DB_SCHEMA;
+    CREATE SCHEMA $WEBSHOP_CART_DB_SCHEMA;
+    CREATE SCHEMA $WEBSHOP_SHIPPING_DB_SCHEMA;
 
-    CREATE USER $WEBSHOP_CATALOG_DB_USER WITH ENCRYPTED PASSWORD '$WEBSHOP_CATALOG_DB_PASSWORD';
-    GRANT ALL ON SCHEMA $WEBSHOP_CATALOG_SCHEMA TO $WEBSHOP_CATALOG_DB_USER;
+    CREATE USER $WEBSHOP_CATALOG_DB_USERNAME WITH PASSWORD '$WEBSHOP_CATALOG_DB_PASSWORD';
+    GRANT ALL ON SCHEMA $WEBSHOP_CATALOG_DB_SCHEMA TO $WEBSHOP_CATALOG_DB_USERNAME;
 
-    CREATE USER $WEBSHOP_CART_DB_USER WITH ENCRYPTED PASSWORD '$WEBSHOP_CART_DB_PASSWORD';
-    GRANT ALL ON SCHEMA WEBSHOP_CART_SCHEMA TO $WEBSHOP_CART_DB_USER;
+    CREATE USER $WEBSHOP_CART_DB_USERNAME WITH PASSWORD '$WEBSHOP_CART_DB_PASSWORD';
+    GRANT ALL ON SCHEMA $WEBSHOP_CART_DB_SCHEMA TO $WEBSHOP_CART_DB_USERNAME;
 
-    CREATE USER $WEBSHOP_SHIPPING_DB_USER WITH ENCRYPTED PASSWORD '$WEBSHOP_SHIPPING_DB_PASSWORD';
-    GRANT ALL ON SCHEMA $WEBSHOP_SHIPPING_SCHEMA TO $WEBSHOP_SHIPPING_DB_USER;
+    CREATE USER $WEBSHOP_SHIPPING_DB_USERNAME WITH PASSWORD '$WEBSHOP_SHIPPING_DB_PASSWORD';
+    GRANT ALL ON SCHEMA $WEBSHOP_SHIPPING_DB_SCHEMA TO $WEBSHOP_SHIPPING_DB_USERNAME;
     "
 
     psql -U$POSTGRES_USER -d$POSTGRES_DB -c "$cmd"
