--- a/checkout-service/src/main/resources/application.properties
+++ b/checkout-service/src/main/resources/application.properties
@@ -1,9 +1,18 @@
 spring.application.name=checkout-service
-server.port=9081
+server.port=9082
 
 #standalone database
 spring.jpa.database=POSTGRESQL
+spring.jpa.properties.hibernate.default_schema=webshop_checkout
 spring.datasource.platform=postgres
-spring.datasource.url=jdbc:postgresql://localhost:5432/checkout-db
+spring.datasource.url=jdbc:postgresql://localhost:5432/webshop-db?createDatabaseIfNotExist=true&useSSL=false
 spring.datasource.username=gca
 spring.datasource.password=gca
+
+spring.jpa.hibernate.ddl-auto=create
+spring.jpa.generate-ddl=true
+
+spring.session.store-type=jdbc
+spring.session.jdbc.initialize-schema=always
+spring.session.timeout.seconds=600
+spring.h2.console.enabled=true
