create a api call between checkout and catalog

--- a/checkout-service/src/main/resources/application.properties
+++ b/checkout-service/src/main/resources/application.properties
@@ -16,3 +16,5 @@ spring.session.store-type=jdbc
 spring.session.jdbc.initialize-schema=always
 spring.session.timeout.seconds=600
 spring.h2.console.enabled=true
+
+url.catalog=http://localhost:9080/api/
