create shipping service

--- a/checkout-service/src/main/resources/application.properties
+++ b/checkout-service/src/main/resources/application.properties
@@ -18,3 +18,5 @@ spring.session.timeout.seconds=600
 spring.h2.console.enabled=true
 
 url.catalog=http://localhost:9080/api/
+url.cart=http://localhost:9081/api/
+url.shipping=http://localhost:9083/api/
