--- a/shipping-service/src/main/resources/application.properties
+++ b/shipping-service/src/main/resources/application.properties
@@ -1,9 +1,22 @@
 spring.application.name=shipping-service
-
+server.port=9083
 
 #standalone database
 spring.jpa.database=POSTGRESQL
+spring.jpa.properties.hibernate.default_schema=webshop_shipping
 spring.datasource.platform=postgres
-spring.datasource.url=jdbc:postgresql://localhost:5432/shipping-db
+spring.datasource.url=jdbc:postgresql://localhost:5432/webshop-db?createDatabaseIfNotExist=true&useSSL=false
 spring.datasource.username=gca
 spring.datasource.password=gca
+
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.generate-ddl=true
+
+spring.session.store-type=jdbc
+spring.session.jdbc.initialize-schema=always
+spring.session.timeout.seconds=600
+spring.h2.console.enabled=true
+
+url.catalog=http://localhost:9080/api/
+url.cart=http://localhost:9081/api/
+url.checkout=http://localhost:9082/api/
