Adds WEBSHOP_HOST-env-var

--- a/helm/templates/ingress.yaml
+++ b/helm/templates/ingress.yaml
@@ -6,7 +6,7 @@ metadata:
     app.kubernetes.io/component: ingress
 spec:
   rules:
-    - host: {{ .Values.ingress.host }}
+    - host: {{ .Values.host }}
       http:
         paths:
           - path: /api/cart
