--- a/helm/templates/cart/deployment.yaml
+++ b/helm/templates/cart/deployment.yaml
@@ -26,3 +26,4 @@ spec:
 {{ include "webshop.auth.env.cart" . | indent 10 }}
 {{ include "webshop.env.spring.profiles.active" . | indent 10 }}
 {{ include "webshop.env.spring.show-sql" . | indent 10 }}
+{{ include "webshop.env.host" . | indent 10 }}
