--- a/cart/src/main/resources/application.yml
+++ b/cart/src/main/resources/application.yml
@@ -7,9 +7,7 @@ spring:
   main:
     web-application-type: reactive
 
-
-
-spring.profiles.active: dev
+spring.profiles.active: no-security
 
 spring.resources.cache.cachecontrol.max-age: 600
 spring.resources.cache.cachecontrol.cache-public: true
@@ -25,7 +23,7 @@ spring.jpa.show-sql: true
 spring.main.cloud-platform: kubernetes
 
 management.endpoint.metrics.enabled: true
-management.endpoints.web.exposure.include: '*'
+management.endpoints.web.exposure.include: "*"
 management.endpoint.prometheus.enabled: true
 management.metrics.export.prometheus.enabled: true
 management.endpoint.health.show-details: always
@@ -35,9 +33,7 @@ management.health:
   ratelimiters.enabled: true
   diskspace.enabled: false
 
-
 logging.level.root: INFO
-
 
 resilience4j.circuitbreaker:
   configs:
