--- a/catalog/src/main/resources/application.yml
+++ b/catalog/src/main/resources/application.yml
@@ -1,9 +1,5 @@
 server:
   port: 9081
-  servlet.session.cookie:
-    domain: localhost
-    http-only: true
-    path: /
 
 spring.application.name: catalog
 
@@ -11,9 +7,7 @@ spring:
   main:
     web-application-type: reactive
 
-
-
-spring.profiles.active: dev
+spring.profiles.active: no-security
 
 spring.resources.cache.cachecontrol.max-age: 600
 spring.resources.cache.cachecontrol.cache-public: true
@@ -29,19 +23,20 @@ spring.jpa.show-sql: true
 spring.main.cloud-platform: kubernetes
 
 management.endpoint.metrics.enabled: true
-management.endpoints.web.exposure.include: '*'
+management.endpoints.web.exposure.include: "*"
 management.endpoint.prometheus.enabled: true
 management.metrics.export.prometheus.enabled: true
 management.endpoint.health.show-details: always
+
+management.security.enabled: false
+management.server.port: 10000
 
 management.health:
   circuitbreakers.enabled: true
   ratelimiters.enabled: true
   diskspace.enabled: false
 
-
 logging.level.root: INFO
-
 
 resilience4j.circuitbreaker:
   configs:
