--- a/shipping/pom.xml
+++ b/shipping/pom.xml
@@ -117,6 +117,10 @@
 			<artifactId>retrofit</artifactId>
 			<version>2.9.0</version>
 		</dependency>
+		<dependency>
+			<groupId>com.fasterxml.jackson.datatype</groupId>
+			<artifactId>jackson-datatype-jsr310</artifactId>
+		</dependency>
 	</dependencies>
 
 	<build>
