--- a/cart/src/main/resources/application.yml
+++ b/cart/src/main/resources/application.yml
@@ -16,7 +16,7 @@ spring.datasource.url: jdbc:postgresql://localhost:5432/postgres?useSSL=false
 spring.datasource.username: postgres
 spring.datasource.password: postgres
 spring.jpa.properties.hibernate.dialect: org.hibernate.dialect.PostgreSQLDialect
-spring.jpa.hibernate.ddl-auto: create-drop
+spring.jpa.hibernate.ddl-auto: update
 spring.jpa.generate-ddl: true
 spring.jpa.show-sql: true
 
